# cmdb

./: .env.dev  .env.example  .gitignore  CLAUDE.ko.md  CLAUDE.md  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  ruff.toml  skills-lock.json
services/auth/: Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 001_create_auth_tables.py
services/auth/src/auth/: main.py  routers.py
services/auth/src/auth/application/: command_handlers.py  commands.py  dto.py  queries.py  query_handlers.py
services/auth/src/auth/domain/: api_token.py  events.py  group.py  repository.py  role.py  services.py  user.py
services/auth/src/auth/group/: __init__.py
services/auth/src/auth/infrastructure/: api_token_repository.py  config.py  group_repository.py  login_rate_limiter.py  role_repository.py  security.py  seed.py  user_repository.py
services/auth/src/auth/interface/: dependencies.py  main.py  router.py  schemas.py
services/auth/src/auth/role/: __init__.py
services/auth/src/auth/shared/: __init__.py  auth_router.py  config.py  database.py  dependencies.py  login_rate_limiter.py  models.py  security.py  seed.py  token_blacklist.py
services/auth/src/auth/user/: __init__.py
services/auth/tests/: conftest.py  test_auth_db.py  test_auth_e2e.py
services/event/: Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/event/alembic/: env.py
services/event/alembic/versions/: 001_create_event_tables.py  002_add_journal_entries.py
services/event/src/event/domain/: models.py
services/event/src/event/infrastructure/: changelog_repository.py  config.py  database.py  event_consumer.py  event_repository.py  journal_repository.py  models.py
services/event/src/event/interface/: main.py  router.py  schemas.py
services/event/tests/: test_journal.py
services/ipam/: Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/ipam/alembic/: env.py
services/ipam/alembic/versions/: 001_create_ipam_tables.py  002_add_new_aggregates.py  003_add_search_and_saved_filters.py  004_add_export_templates.py
services/ipam/src/ipam/: main.py  routers.py
services/ipam/src/ipam/application/: command_handlers.py  commands.py  dto.py  export_service.py  import_service.py  queries.py  query_handlers.py  read_model.py
services/ipam/src/ipam/asn/: __init__.py
services/ipam/src/ipam/domain/: asn.py  events.py  fhrp_group.py  ip_address.py  ip_range.py  prefix.py  repository.py  rir.py  route_target.py  service.py  services.py  value_objects.py  vlan.py  vlan_group.py  vrf.py
services/ipam/src/ipam/fhrp_group/: __init__.py
services/ipam/src/ipam/graphql/: context.py  gql_types.py  schema.py
services/ipam/src/ipam/infrastructure/: config.py  database.py  event_projector.py  models.py  read_model_repository.py  saved_filter_repository.py  search_repository.py  template_repository.py
services/ipam/src/ipam/interface/: main.py  schemas.py
services/ipam/src/ipam/ip_address/: __init__.py
services/ipam/src/ipam/ip_range/: __init__.py
services/ipam/src/ipam/rir/: __init__.py
services/ipam/src/ipam/shared/: __init__.py  cache.py  config.py  cross_service_consumer.py  database.py  event_projector.py  models_base.py  query_utils.py  schemas.py  value_objects.py
services/ipam/src/ipam/vlan/: __init__.py
services/ipam/tests/test_application/: test_import_export.py  test_query_handlers.py  test_saved_filters.py  test_search.py
services/ipam/tests/test_domain/: test_asn.py  test_fhrp_group.py  test_ip_address.py  test_ip_range.py  test_prefix.py  test_rir.py  test_route_target.py  test_service.py  test_services.py  test_value_objects.py  test_vlan.py  test_vlan_group.py  test_vrf.py
services/ipam/tests/test_integration/: conftest.py  test_event_flow.py  test_ipam_db.py  test_ipam_e2e.py  test_kafka_flow.py  test_tenant_isolation.py
services/tenant/: Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
services/tenant/alembic/: env.py
services/tenant/alembic/versions/: 001_create_tenants_table.py
services/tenant/alembic_tenant_db/: env.py
services/tenant/src/tenant/application/: command_handlers.py  commands.py  dto.py  queries.py  query_handlers.py
services/tenant/src/tenant/domain/: __init__.py  events.py  repository.py  tenant.py
services/tenant/src/tenant/infrastructure/: config.py  db_provisioning.py  models.py  tenant_db_manager.py  tenant_repository.py
services/tenant/src/tenant/interface/: main.py  router.py  schemas.py  setup_router.py
services/webhook/: Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
services/webhook/alembic/: env.py
services/webhook/alembic/versions/: 001_create_webhook_tables.py
services/webhook/src/webhook/application/: command_handlers.py  commands.py  dto.py  queries.py  query_handlers.py
services/webhook/src/webhook/domain/: repository.py  webhook.py  webhook_log.py
services/webhook/src/webhook/infrastructure/: config.py  database.py  (+7 more)
services/webhook/tests/test_domain/: test_webhook.py  test_webhook_log.py
services/webhook/tests/test_infrastructure/: test_event_matching.py  test_retry_manager.py  test_webhook_delivery.py
services/webhook/tests/test_integration/: test_webhook_e2e.py
shared/: pyproject.toml
shared/src/shared/api/: __init__.py  errors.py  filtering.py  middleware.py  openapi.py  pagination.py  sorting.py
shared/src/shared/cqrs/: __init__.py  bus.py  command.py  query.py
shared/src/shared/db/: tenant_db_manager.py
shared/src/shared/domain/: __init__.py  custom_field.py  custom_field_mixin.py  entity.py  exceptions.py  filters.py  models.py  repository.py  tag.py
shared/src/shared/event/: __init__.py  aggregate.py  domain_event.py  models.py  pg_store.py  snapshot.py  store.py
shared/src/shared/messaging/: __init__.py  consumer.py  producer.py  serialization.py
(+377 files in other folders)
