[project]
name = "cmdb-shared"
version = "0.1.0"
description = "CMDB Shared Library"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic",
    "aiokafka",
    "redis",
    "fastapi>=0.115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
