[project]
name = "cmdb-auth"
version = "0.1.0"
description = "CMDB auth Service"
requires-python = ">=3.13"
dependencies = [
    "cmdb-shared",
    "fastapi>=0.115",
    "uvicorn",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic-settings>=2.0",
    "bcrypt>=4.0",
    "PyJWT>=2.0",
    "cryptography>=42.0",
    "redis>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]

[tool.uv.sources]
cmdb-shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["integration: requires Docker infrastructure (PostgreSQL, Kafka, Redis)"]
