[project]
name = "cmdb-ipam"
version = "0.1.0"
description = "CMDB ipam Service"
requires-python = ">=3.13"
dependencies = [
    "cmdb-shared",
    "fastapi>=0.115",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipam"]

[tool.uv.sources]
cmdb-shared = { workspace = true }
