[project]
name = "cmdb-ipam"
version = "0.1.0"
description = "CMDB ipam Service"
requires-python = ">=3.13"
dependencies = [
    "cmdb-shared",
    "fastapi>=0.115",
    "uvicorn",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic-settings>=2.0",
    "aiokafka",
    "redis>=5.0",
    "jinja2>=3.1",
    "python-multipart",
    "pyyaml>=6.0",
    "strawberry-graphql[fastapi]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipam"]

[tool.uv.sources]
cmdb-shared = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = ["integration: requires Docker infrastructure (PostgreSQL, Kafka, Redis)"]
