[project]
name = "cmdb-tenant"
version = "0.1.0"
description = "CMDB tenant Service"
requires-python = ">=3.13"
dependencies = [
    "cmdb-shared",
    "fastapi>=0.115",
    "uvicorn",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pydantic-settings>=2.0",
    "aiokafka",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenant"]

[tool.uv.sources]
cmdb-shared = { workspace = true }
