[project]
name = "cmdb-webhook"
version = "0.1.0"
description = "CMDB webhook Service"
requires-python = ">=3.13"
dependencies = [
    "cmdb-shared",
    "fastapi>=0.115",
    "uvicorn",
    "httpx",
    "pydantic-settings",
    "asyncpg",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webhook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv.sources]
cmdb-shared = { workspace = true }
